--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "zod": "^3.24.1",
     "zustand": "^4.5.0"
