--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-pdf/renderer": "^4.1.6",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.3",
+    "@types/jspdf": "^1.3.3",
     "clsx": "^2.1.0",
+    "jspdf": "^2.5.2",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
