--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/jspdf": "^1.3.3",
     "clsx": "^2.1.0",
     "jspdf": "^2.5.2",
-    "next": "14.1.0",
+    "next": "^14.2.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
